--- a/less/projects-section.less
+++ b/less/projects-section.less
@@ -98,6 +98,7 @@
           background-size: 100% 100%;
           max-width:100%;
           overflow:hidden;
+          padding-left: 0;
           img {
               .transition (all 0.4s ease-in-out);
               
